NXT-3291: load version wfms from hub
- Add `version` parameter to `fetchItemByID` in  APHubFacade, RestSpaceProvider, etc. This is eventually used as a query parameter to the catalog service.
- Add methods to `Project` to load a version workflow manager.
- Add a `version` parameter to WorkflowService#getVersion.
- Clarify the `Project` concept regarding when and where wfm instances are cached.
- Move `Origin` to own file

(NXT-3291: Load & Provide specific version)